Stop testing against JDK 19